--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-A-Sketch</title>
   </head>
   <body>
+    <div id="main-wrapper"></div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
