Add grid blocks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Etch-A-Sketch</title>
   </head>
   <body>
-    <div id="main-wrapper"></div>
+    <button onclick="createGrid()">Create Grid</button>
+    <div id="main-wrapper" class="grid"></div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
