Add reset button:

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <button onclick="createGrid()">Create Grid</button>
+    <button onclick="createGrid()">Reset Grid</button>
     <div id="main-wrapper" class="grid"></div>
     <script src="scripts/main.js"></script>
   </body>
