--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <button onclick="createGrid()">Create Grid</button>
     <button onclick="createGrid()">Reset Grid</button>
-    <div id="main-wrapper" class="grid"></div>
+    <div class="mainDiv">
+      <div id="main-wrapper" class="grid"></div>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
