--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap"
+      rel="stylesheet"
+    />
     <title>Etch-A-Sketch</title>
   </head>
   <body>
-    <button onclick="createGrid()">Create Grid</button>
-    <button onclick="createGrid()">Reset Grid</button>
+    <header class="head">
+      <h1>Welcome to <span>Etch-A-Sketch</span></h1>
+      <button onclick="createGrid()">Create Grid</button>
+      <button onclick="createGrid()">Reset Grid</button>
+    </header>
+
     <div class="mainDiv">
       <div id="main-wrapper" class="grid"></div>
     </div>
