Add clear button and other stuff

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <h1>Welcome to <span>Etch-A-Sketch</span></h1>
       <button onclick="createGrid()">Create Grid</button>
       <button onclick="createGrid()">Reset Grid</button>
+      <button onclick="clearGrid()">Clear</button>
+      <div>
+        <input id="color-picker" type="color" name="color" value="#31498a" />
+      </div>
+      <div class="bottom">
+        <button onclick="createGrid()">Random Colors</button>
+        <button onclick="createGrid()">Grayscale</button>
+      </div>
     </header>
 
     <div class="mainDiv">
