Fix change color

--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
       <button onclick="createGrid()">Reset Grid</button>
       <button onclick="clearGrid()">Clear</button>
       <div>
-        <input
-          onChange="changeColor()"
-          id="color-picker"
-          type="color"
-          name="color"
-          value="#31498a"
-        />
+        <input id="color-picker" type="color" name="color" value="#31498a" />
       </div>
       <div class="bottom">
         <button onclick="createGrid()">Random Colors</button>
