Add random colors

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <input id="color-picker" type="color" name="color" value="#31498a" />
       </div>
       <div class="bottom">
-        <button onclick="createGrid()">Random Colors</button>
-        <button onclick="createGrid()">Grayscale</button>
+        <button onclick="startRandomColor()">Random Colors</button>
+        <button onclick="startGreyScale()">Grayscale</button>
       </div>
     </header>
 
